<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/img_1"
    tools:context=".Login">

    <TextView
        android:id="@+id/tvlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold"
        tools:ignore="InvalidId" />

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvlogin"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="20dp"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/edtpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtemail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:autofillHints="Password"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_password_24"
        android:drawablePadding="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvwrongidpass"
        android:visibility="invisible"
        android:text="@string/wrong_email_or_password"
        android:textColor="@color/red"
        android:layout_below="@+id/edtpassword"
        android:layout_marginStart="20dp"/>


    <LinearLayout
        android:id="@+id/bothbutn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtpassword"
        android:layout_marginTop="130dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="138dp"
            android:layout_height="61dp"
            android:layout_below="@+id/tvwrongidpass"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="53dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input_bg"
            android:backgroundTint="@color/black"
            android:text="LOGIN" />

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="138dp"
            android:layout_height="61dp"
            android:layout_alignBottom="@+id/btnlogin"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="50dp"
            android:layout_marginTop="53dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@+id/btnlogin"
            android:background="@drawable/input_bg"
            android:text="Sign Up" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvforgetpass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtemail"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="87dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/forget_password"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/socialicon"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingVertical="10dp">

        <androidx.appcompat.widget.AppCompatButton
            android:visibility="gone"
            android:id="@+id/googlelogin"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:drawableLeft="@drawable/googleg_standard_color_18"
            android:paddingLeft="12dp"
            android:background="@drawable/input_bg"
            android:backgroundTint="@color/primaryColor"
            android:text="Google"
            android:textColor="@color/primaryTextColor" />
        </LinearLayout>

</RelativeLayout>